# diycarhu-carui

./: CMakeLists.txt
src/: AudioControl.qml  AuxSourceBox.qml  BassBoostMenu.qml  BluetoothPairMenu.qml  BluetoothRemoveMenu.qml  BottomBar.qml  CMakeLists.txt  Menu.qml  MpdSourceBox.qml  NavBox.qml  NavMenu.qml  NavRoute.qml  PlaceholderMenuModel.qml  RadioSourceBox.qml  RootMenuModel.qml  SigmaDSP_parameters.h  SourceMenu.qml  SourceMenuItem.qml  amp.cpp  amp.h  arduino.cpp  arduino.h  backend.cpp  backend.h  bluetooth.cpp  bluetooth.h  bluetooth_agent.cpp  bluetooth_agent.h  dummy_gps.cpp  dummy_gps.h  gps.cpp  gps.h  main.cpp  main.h  main.qml  mpd.cpp  mpd.h  nav_icons.qrc  nav_icons.qrc.sh  qml.qrc  (+7 more)
src/SigmaDSP/: SigmaDSP.cpp  SigmaDSP.h  parameters.h
